# B2B-LeadGen

./: .gitignore  CMakeLists.txt  main.cpp
backend/: CMakeLists.txt  README.md  main.cpp
backend/graph/: graph_data.json  index.html  runflask.py
backend/src/: dbConnector.cpp  jsonConverter.cpp  jsonConverter.hpp  mathFunctions.cpp  mathFunctions.hpp  simCalculator.cpp  simScore.hpp
frontend/: package-lock.json  package.json
frontend/public/graph/: graph_data.json
frontend/src/app/: page.tsx
frontend/src/app/api/search/: route.ts
frontend/src/app/results/: page.tsx
frontend/src/app/results/components/: Graph3D.tsx
graph/: graph_data.json
src/: PromptExtractor.cpp  PromptExtractor.h  categories.txt  company.hpp  cors_middleware.hpp  dbConnector.hpp  dbHandler.cpp  dbHandler.hpp  embedding.hpp  extract.py  extractEmbeddings.py  jsonConverter.hpp  mathFunctions.cpp  server.cpp  simCalculator.cpp  simCalculator.hpp
